# tock

./: .gitignore  Makefile  step0-deletions-log.json  trusteds.md
.github/workflows/: ci.yml
arch/cortex-m/: Cargo.toml
arch/cortex-m/src/: lib.rs  syscall.rs  systick.rs
arch/cortex-v7m/: Cargo.toml
arch/cortex-v7m/src/: lib.rs
arch/rv32i/: Cargo.toml
boards/nordic/nrf52840dk/: Cargo.toml
boards/nordic/nrf52840dk/src/: io.rs
capsules/core/: Cargo.toml  find_panics.py  summary-new.txt  summary.txt  summary3.txt  symbols.txt  triage_logs.py
capsules/core/src/: adc.rs  alarm.rs  button.rs  console.rs  gpio.rs  i2c_master.rs  i2c_master_slave_driver.rs  led.rs  lib.rs  process_console.rs  spi_controller.rs  spi_peripheral.rs  stream.rs
capsules/core/src/low_level_debug/: mod.rs
capsules/core/src/virtualizers/: virtual_aes_ccm.rs  virtual_alarm.rs  virtual_uart.rs
capsules/extra/: Cargo.toml
capsules/extra/src/: ble_advertising_driver.rs  kv_driver.rs  kv_store_permissions.rs  lib.rs  mx25r6435f.rs  sip_hash.rs  tickv.rs  virtual_kv.rs
capsules/extra/src/ieee802154/: driver.rs  framer.rs  mac.rs
capsules/extra/src/net/: ieee802154.rs  network_capabilities.rs  stream.rs  util.rs
capsules/extra/src/net/icmpv6/: icmpv6.rs
capsules/extra/src/net/ipv6/: ip_utils.rs  ipv6.rs
capsules/extra/src/net/sixlowpan/: sixlowpan_compression.rs  sixlowpan_state.rs
capsules/extra/src/net/udp/: driver.rs  udp.rs  udp_port_table.rs  udp_send.rs
capsules/system/: Cargo.toml
chips/nrf52/: Cargo.toml
chips/nrf52/src/: adc.rs  ble_radio.rs  chip.rs  nvmc.rs  usbd.rs
chips/nrf52840/: Cargo.toml
chips/nrf52840/src/: ieee802154_radio.rs  interrupt_service.rs
chips/nrf5x/: Cargo.toml
chips/nrf5x/src/: aes.rs  gpio.rs  pinmux.rs  timer.rs
chips/virtio/: Cargo.toml
docs/: flux_tuple_pack_limitation.md  methodology.md  transitive_obligations_plan.md
docs/panic_stats/: annotation_breakdown_2026-05-21.md  caller_proven_handoff.md
flux_support/: Cargo.toml
flux_support/src/: flux_cell.rs  flux_ptr.rs  lib.rs
flux_support/src/extern_specs/: bool.rs  cell.rs  cmp.rs  convert.rs  default.rs  deref.rs  index.rs  iter.rs  mod.rs  num.rs  option.rs  ord.rs  partial_ord.rs  range.rs  result.rs  slice.rs  try_trait.rs
kernel/: Cargo.toml
kernel/src/: debug.rs  errorcode.rs  grant.rs  kernel.rs  process.rs  process_binary.rs  process_standard.rs  processbuffer.rs  syscall_driver.rs  upcall.rs
kernel/src/collections/: list.rs  queue.rs  ring_buffer.rs
kernel/src/hil/: can.rs  gpio.rs  i2c.rs  led.rs  spi.rs  time.rs  uart.rs
kernel/src/scheduler/: cooperative.rs  mlfq.rs  round_robin.rs
kernel/src/utilities/: binary_write.rs  leasable_buffer.rs  math.rs  static_init.rs
libraries/tickv/: Cargo.toml
libraries/tickv/src/: async_ops.rs  tickv.rs
libraries/tock-cells/: Cargo.toml
libraries/tock-cells/src/: map_cell.rs  optional_cell.rs  take_cell.rs
tools/: .gitignore  apply_flux_annotations.py  caller_closure_flux.json  caller_closure_flux.py  capsule_panic_plan.md  check_invariant1.py  classify_vacuous.py  count_flux_annotations.sh  dead_proven_validate.json  dead_proven_validate.py  deice_probe.py  diff_flux_includes.py  drop_broken_asserts.py  dump_spans.py  find_panics.py  find_panics_flux.py  flux_health.json  flux_health.py  flux_inscope_skipped.txt  flux_number.sh  flux_silent_spans.md  flux_spans.tsv  gen_flux_includes.py  gen_panic_sites_md.py  generate_missing_markers.py  invariant_one.md  inventory_flux_fns.py  migrate_blocker_to_blockers.py  negation_probe.json  negation_probe.py  panic-sites.md  panic_accounting.py  panic_elimination_strategy.md  panic_label.py  panic_ledger.csv  panic_ledger.md  panic_proven_chart.py  panic_reconcile.py  panic_sites.md  panic_stats.py  (+11 more)
tools/flux_trait_impl_repro/: README.md  const_in_sig_repro.rs  lib.rs
