# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "cortexm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.flux]
enabled = true
check_overflow = "lazy"
include = [
    "def:get_remaining_us",
    "def:write_usize_to_u8_slice",
    "def:usize_byte_range",
]

[dependencies]
kernel = { path = "../../kernel" }
flux-rs = { path = "/Users/andrew/research/flux/lib/flux-rs" }
flux_support = { path = "../../flux_support" }
flux-core = { path = "/Users/andrew/research/flux/lib/flux-core" }

[lints]
workspace = true
