# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2024.

[package]
name = "cortexv7m"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.flux]
enabled = true
check_overflow = "lazy"
include = [
    "def:hard_fault_handler_arm_v7m_kernel",
    "def:switch_to_user_arm_v7m",   # holds FLUX-TODO-FN-LEVEL marker
]

[dependencies]
kernel = { path = "../../kernel" }
flux-rs = { path = "/Users/andrew/research/flux/lib/flux-rs" }
flux_support = { path = "../../flux_support" }

[lints]
workspace = true
