# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "rv32i"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
flux-core = { path = "/Users/andrew/research/flux/lib/flux-core" }
kernel = { path = "../../kernel" }
flux_support = { path = "../../flux_support" }
tock-registers = { path = "../../libraries/tock-register-interface" }
riscv-csr = { path = "../../libraries/riscv-csr" }
riscv = { path = "../riscv" }
flux-rs = { path = "/Users/andrew/research/flux/lib/flux-rs" }

[package.metadata.flux]
enabled = true
check_overflow = "lazy"

[lints]
workspace = true
