# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2023.

[package]
name = "capsules-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
tickv = { path = "../../libraries/tickv" }
# flux-rs = { git = "https://github.com/flux-rs/flux" }
flux-rs = { path = "/Users/acheung/research/projects/flux/lib/flux-rs/" }
flux_support = { path = "../../flux_support" }

[package.metadata.flux]
enabled = true
check_overflow = "lazy"
no_panic = true
include = [ "src/button.rs", "src/led.rs", "src/console.rs", "src/alarm.rs", "src/spi_peripheral.rs", "src/stream.rs"  ]

[lints]
workspace = true
