# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2023.

[package]
name = "capsules-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
tickv = { path = "../../libraries/tickv" }
flux-rs = { path = "/Users/andrew/research/flux/lib/flux-rs" }
flux_support = { path = "../../flux_support" }

[package.metadata.flux]
enabled = true
check_overflow = "lazy"
include = [
    "src/button.rs",
    "src/gpio.rs",
    "src/i2c_master_slave_driver.rs",
    "src/process_console.rs",
    "src/spi_controller.rs",
    "src/virtualizers/virtual_aes_ccm.rs",
    "src/virtualizers/virtual_uart.rs",
]


[lints]
workspace = true
