# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2023.

[package]
name = "capsules-extra"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
tickv = { path = "../../libraries/tickv" }
capsules-core = { path = "../core" }
flux-rs = { path = "/Users/andrew/research/flux/lib/flux-rs" }
flux_support = { path = "../../flux_support" }

[package.metadata.flux]
enabled = true
check_overflow = "lazy"
include = [
    "src/net/ipv6/ip_utils.rs",
    "src/ieee802154/framer.rs",
    "src/net/network_capabilities.rs",
    "src/ieee802154/mac.rs",
]

[lints]
workspace = true
