# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2023.

[package]
name = "capsules-extra"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
tickv = { path = "../../libraries/tickv" }
capsules-core = { path = "../core" }
flux-rs = { path = "/Users/andrew/research/flux/lib/flux-rs" }
flux_support = { path = "../../flux_support" }

[package.metadata.flux]
enabled = true
check_overflow = "lazy"
include = [
    "src/ble_advertising_driver.rs",
    "src/ieee802154/driver.rs",
    "src/ieee802154/framer.rs",
    "src/ieee802154/mac.rs",
    "src/mx25r6435f.rs",
    "src/net/ipv6/ip_utils.rs",
    "src/net/ipv6/ipv6.rs",
    "src/net/network_capabilities.rs",
    "src/net/sixlowpan/sixlowpan_state.rs",
    "src/net/stream.rs",
    "src/net/udp/udp_port_table.rs",
    "src/net/udp/udp_send.rs",
    "src/net/util.rs",
    "src/sip_hash.rs",
    "src/tickv.rs",
    "src/virtual_kv.rs",
    # sixlowpan_compression.rs: per-fn while we work through it; flip to
    # "src/net/sixlowpan/sixlowpan_compression.rs" once all fns are clean.
    "def:decompress_udp_checksum",
    "def:decompress_iid_link_local",
    "def:decompress_udp_ports",
    "def:decompress_iid_context",
    "def:decompress_multicast",
    "def:decompress_cie",
    "def:decompress_tf",
    "def:decompress_nh",
    "def:decompress_hl",
    "def:decompress_src",
    "def:decompress_dst",
    "def:nhc_to_ip6_nh",
    "def:decompress_ext_hdr",
    "def:result_to_errorcode",
    "def:decompress",
    "def:get_context_0",
    # per-fn for panic-bearing fns in otherwise-unverified files:
    "def:command",  # KVStoreDriver::command (kv_driver.rs) and UDPDriver::command (net/udp/driver.rs)
]

[lints]
workspace = true
