# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "nrf52840"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.flux]
enabled = true
check_overflow = "lazy"
include = [
    "def:handle_interrupt",
    "def:rx",
    "def:service_interrupt",   # interrupt_service.rs — holds FLUX-TODO-BLOCKED marker
]

[dependencies]
cortexm4 = { path = "../../arch/cortex-m4" }
kernel = { path = "../../kernel" }
nrf52 = { path = "../nrf52" }
flux_support = { path = "../../flux_support" }

[lints]
workspace = true
