# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "nrf5x"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.flux]
enabled = true
check_overflow = "lazy"
include = [
    "def:copy_plaintext",
    "def:crypt",
    "def:handle_interrupt",
    "def:disable_interrupts",
    "def:enable_interrupts",
    "src/pinmux.rs",
]

[dependencies]
kernel = { path = "../../kernel" }
enum_primitive = { path = "../../libraries/enum_primitive" }
flux_support = { path = "../../flux_support" }

[features]
default = []

nrf51 = []
nrf52 = []

[lints]
workspace = true
