# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2022.

[package]
name = "tock-cells"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
edition = "2021"

[package.metadata.flux]
enabled = true
check_overflow = "lazy"
include = [
    "src/map_cell.rs",
    "src/numeric_cell_ext.rs",
    "src/optional_cell.rs",
    "src/take_cell.rs",
    "src/volatile_cell.rs",
]

[dependencies]
flux-rs = { path = "/Users/andrew/research/flux/lib/flux-rs" }
flux_support = { path = "../../flux_support" }

[lints]
workspace = true
